
2019-03-10  Simon Sobisch <simonsobisch@gnu.org>

	* typeck.c (cb_check_overlapping): do only the check, logic and messages
	  moved to (validate_move)
	* parser.y: minor refactoring

2019-03-09  Simon Sobisch <simonsobisch@gnu.org>

	* codegen.c: fixed freeing LOCAL-STORAGE memory using the wrong "free"
	* codegen.c (output_function_prototypes): use expected declaration
	  for EXTFH modules to possibly catch modules using different interface
	* parser.y, reserved.c: added RAISE statement as PENDING
	* parser.y: work on pending USE ON exception-name

2019-02-17  Simon Sobisch <simonsobisch@gnu.org>

	* parser.y: renamed build_nested_special -> build_words_for_nested_programs
	* parser.y: fixed bug #566 nested programs do not inherit class-names

2019-02-16  Simon Sobisch <simonsobisch@gnu.org>

	* parser.y, typeck.c: fixed bug #567 missing error recovery in conditions

2019-02-09  Simon Sobisch <simonsobisch@gnu.org>

	* parser.y, tree.h, reserved.c: moved translation "word to system name" from
	  parser.y (mnemonic_name_clause) to reserved.c (get_system_name_translated)
	* tree.c (cb_list_map), tree.h: directly check for error node,
	  return 1 if found
	* typeck.c (cb_check_numeric_name, cb_check_numeric_edited_name): always
	  check for error node outside these functions, minor refactoring

2019-02-05  Simon Sobisch <simonsobisch@gnu.org>

	* parser.y, tree.h, tree.c: splitted cb_category_is_national from
	  cb_category_is_alphanumeric

2019-01-29  Simon Sobisch <simonsobisch@gnu.org>

	* tree.h, reserved.c, typeck.c: added SYSPUNCH/SYSPCH as CB_DEVICE_SYSPCH
	* reserved.c: added S01-S05, currently internally as CB_FEATURE_FORMFEED
	* typeck.c (cb_build_display_name): don't warn about
	  ACCEPT FROM / DISPLAY UPON device-name in IBM/MVS/MF mode

2019-01-27  Simon Sobisch <simonsobisch@gnu.org>

	* cobc.c, reserved.c: fixed compiler warnings

2019-01-20  Simon Sobisch <simonsobisch@gnu.org>

	* cobc.c (cobc_print_info): added note for cJSON
